--- a/Resources.qrc
+++ b/Resources.qrc
@@ -9,5 +9,6 @@
         <file>imagenes/sun.png</file>
         <file>imagenes/sol.png</file>
         <file>imagenes/plano.png</file>
+        <file>posiciones/datos.txt</file>
     </qresource>
 </RCC>
