--- a/Resources.qrc
+++ b/Resources.qrc
@@ -10,5 +10,7 @@
         <file>imagenes/sol.png</file>
         <file>imagenes/plano.png</file>
         <file>posiciones/datos.txt</file>
+        <file>imagenes/plano 2.png</file>
+        <file>imagenes/cartesiano.png</file>
     </qresource>
 </RCC>
